# asteroidea

./: .ghci  .gitignore  LICENSE  README.md  asteroidea.cabal  package.yaml  stack.yaml
app/: Main.hs
other/: a.txt
src/: #Asteroidea.hs#  #Const.hs#  #Core.hs#  #GVector.hs#  #VarTree.hs#  .#Asteroidea.hs  .#GVector.hs  .#VarTree.hs  .#Variation.hs  0.sh  0.sh~  1.sh  Animation.hs  Asteroidea.hs  Asteroidea.hs~  ClassField.hs  ClassField.hs~  Const.hs  Const.hs~  Core.hs  Examples.hs  GVector.hs  Gradient.hs  HexPalette.hs  HexPalette.hs~  Matrix.hs  Parser.hs  Plotter.hs  PostColoring.hs  RND.hs  RunIO.hs  TODO_list.txt  Temp.hs  Transform.hs  Types.hs  VarTree.hs  Variation.hs  Variation.hs~  Variations.hs  a.txt  (+3 more)
src/Asteroidea/: ClassField.hs  Coloring.hs  Const.hs  Examples.hs  GVector.hs  Gradient.hs  HexPalette.hs  PostColoring.hs  Sierpinski.hs  Transform.hs  Types.hs  VarTree.hs  Variations.hs
src/Asteroidea/Gloss/: Simulate.hs
src/Asteroidea/IFS/: Classic.hs
src/Asteroidea/Juicy/: Coloring.hs  Image.hs
src/Asteroidea/Simulate/: .BlackAndWhite.hs.swp  BlackAndWhite.hs  Simple.hs
src/Model/: Hex.hs  Hex.txt  Library.hs  Serpinski.hs  Serpinski0.hs  Sphere.hs  Square.hs  Tile.hs  Tile.txt
test/: #Spec.hs#  .#Spec.hs  Spec.hs
