name:                asteroidea
version:             0.1
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              Author name here
maintainer:          author@email.com
copyright:           2017 Author name here
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:
    Asteroidea.Coloring
    Asteroidea.IFS.Classic
    Asteroidea.Sierpinski
    Asteroidea.Simulate.Simple
  build-depends:
      base >= 4.7 && < 5
    , random
    , gloss
  default-language:    Haskell2010

executable asteroidea
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , asteroidea
  default-language:    Haskell2010

test-suite asteroidea-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , asteroidea
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

