name:                asteroidea
version:             0.8
-- synopsis:
description:         Fractal generator
-- homepage:
-- license:
-- license-file:
author:              Haalon
-- maintainer:       
-- copyright:        
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults -O2 -funbox-strict-fields -ddump-simpl -optc-ffast-math -fexcess-precision
  exposed-modules:     Asteroidea
  other-modules:       Types
                     , Const
                     , Variations
                     , GVector
                     , Gradient
                     , PostColoring
                     , VarTree
                     , PostColoring
                     , Model.Hex
                     , Model.Tile
                     , Model.Serpinski

  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , gloss-raster
                     , random
                     , JuicyPixels
                     , vector
  default-language:    Haskell2010

executable asteroidea
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-type-defaults -O2 -funbox-strict-fields -ddump-simpl -optc-ffast-math -fexcess-precision
  build-depends:       base
                     , asteroidea
                     , gloss
                     , gloss-raster
                     , random
                     , matrix
                     , JuicyPixels
                     , vector
  default-language:    Haskell2010

test-suite asteroidea-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             ../test/Spec.hs
  other-modules:       Types
                     , Const
                     , Variations
                     , GVector
                     , Gradient
                     , PostColoring
                     , VarTree
                     , PostColoring
                     , Model.Hex
                     , Model.Tile
                     , Model.Serpinski
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , gloss-raster
                     , random
                     , JuicyPixels
                     , vector
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N 
  default-language:    Haskell2010